force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/GDPRPropagationOrder__mdt.object-meta.xml
<CustomObject>
    <description>Orden de propagación del valor de bloqueo y anonimizado para los registros afectados por el GDPR.</description>
    <label>GDPR Propagation Order</label>
    <pluralLabel>GDPR Propagation Orders</pluralLabel>
</CustomObject>