force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/fields/BlockingField__c.field-meta.xml
<CustomField>
    <fullName>BlockingField__c</fullName>
    <label>Blocking Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>