force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/fields/FormulaField__c.field-meta.xml
<CustomField>
    <fullName>FormulaField__c</fullName>
    <label>Formula Field</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>