force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/fields/IndexOrder__c.field-meta.xml
<CustomField>
    <fullName>IndexOrder__c</fullName>
    <label>Index Order</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>