force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/fields/IsAnonymize__c.field-meta.xml
<CustomField>
    <fullName>IsAnonymize__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo que indica si el metadato es para propagar el anonimizado o no.</description>
    <inlineHelpText>When enabled this record will be used for the anonymize logic instead of blocking.</inlineHelpText>
    <label>Is Anonymize</label>
    <type>Checkbox</type>
</CustomField>