force-app/zurich-base/main/default/objects/GDPRPropagationOrder__mdt/fields/SObjectAPIName__c.field-meta.xml
<CustomField>
    <fullName>SObjectAPIName__c</fullName>
    <label>SObject API Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>